# evo

./: .cursorrules  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PROJECT_MAP.md  README.md  chat.txt  commit_msg.txt  prompt.txt  test_python.py
docs/: API-REFERENCE.md  FEATURES.md  README.md  advanced-features.md  evolution-status.md  getting-started.md  quick-reference.md  syntax-reference.md
examples/: README.md  advanced.aevo  basic.aevo  basic.evo  closure_test.aevo  data_structures.aevo  data_structures.evo  enhanced_ops_test.evo  functions.aevo  jit_test.aevo  lambda_map_test.evo  lambda_test.evo  loop_test.aevo  loop_test.evo  match_test.evo  modules.aevo  self_hosting_demo.evo  simple_filter_test.evo  std_demo.aevo  std_new_functions_test.evo  string_and_type_test.aevo  string_and_type_test.evo  string_test.evo  try_catch_test.aevo
modules/: evolution.aevo  evolution.evo  math.evo  self_hosting.evo  std.aevo  std.evo
python/: README.md
src/: lib.rs  main.rs
src/evolution/: analyzer.rs  code_generator.rs  code_reviewer.rs  dependency.rs  doc_generator.rs  engine.rs  error_recovery.rs  event_manager.rs  knowledge.rs  learning.rs  mod.rs  optimizer.rs  performance.rs  quality_assessor.rs  similarity.rs  test_generator.rs  tracker.rs
src/grammar/: core.rs  mod.rs  rule.rs  self_desc.rs
src/parser/: adaptive.rs  context.rs  explainer.rs  mod.rs  nlu.rs
src/poetry/: emotion.rs  mod.rs  parser.rs
src/python/: bridge.rs  mod.rs
src/runtime/: interpreter.rs  jit.rs  jit_interpreter.rs  mod.rs  mode.rs
