[package]
name = "evo"
version = "0.1.0"
edition = "2021"

[lib]
name = "evo"
crate-type = ["cdylib", "rlib"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
pyo3 = { version = "0.22", features = ["auto-initialize", "extension-module"] }
