[package]
name = "evo"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "evo"
crate-type = ["cdylib", "rlib"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
pyo3 = { version = "0.22", features = ["auto-initialize", "extension-module"] }
clap = { version = "4.5", features = ["derive"] }